pc builder added

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NEXTAUTH_URL=http://localhost:3000
+NEXT_API_BASE_URL=http://localhost:3000
 MONGO_URL=mongodb+srv://maruf-procode:AVHW5ZYRVs2d1Pz7@umcluster.d2dv4no.mongodb.net/pc-builder?retryWrites=true&w=majority
 NEXTAUTH_SECRET=$sjd@12jsd333@00
 GOOGLE_CLIENT_ID=959946087279-dflrgj132h1v6vmcclelv8nnd97ml15j.apps.googleusercontent.com
