--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/cssinjs": "^1.16.0",
     "antd": "^5.7.3",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
@@ -21,6 +22,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.3"
   }
