--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NEXTAUTH_URL=http://localhost:3000
-NEXT_API_BASE_URL=http://localhost:3000
-MONGO_URL=mongodb+srv://maruf-procode:AVHW5ZYRVs2d1Pz7@umcluster.d2dv4no.mongodb.net/pc-builder?retryWrites=true&w=majority
+NEXTAUTH_URL=https://pc-builder-application-xi.vercel.app
 NEXTAUTH_SECRET=$sjd@12jsd333@00
-GOOGLE_CLIENT_ID=959946087279-dflrgj132h1v6vmcclelv8nnd97ml15j.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=959946087279-ksqt0i12fj2v23rmkc1si2ottfr8bhh5.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+MONGO_URL=mongodb+srv://maruf-procode:AVHW5ZYRVs2d1Pz7@umcluster.d2dv4no.mongodb.net/pc-builder?retryWrites=true&w=majority
+NEXT_API_BASE_URL=https://pc-builder-application-xi.vercel.app
